# markio

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README_zh.md  compose.yaml  pyproject.toml  setup.py  start_services.sh
.claude/: settings.local.json
docs/: README_zh.md  cli_usage.md  cli_usage_zh.md  sdk_usage.md  sdk_usage_zh.md
markio/: PROJECT_RENAME_PLAN.md  main.py
markio/markio_mcp/: markio_mcp_server.py
markio/mcps/: mcp_server.py
markio/middlewares/: cors_middleware.py  gzip_middleware.py  handle.py
markio/middlewares/trace_middleware/: __init__.py  ctx.py  middle.py  span.py
markio/parsers/: doc_parser.py  docx_parser.py  epub_parser.py  html_parser.py  image_parser.py  image_parser_old.py  pdf_parser.py  pdf_parser_vlm.py  pdf_parser_vlm_old.py  ppt_parser.py  pptx_parser.py  url_parser.py  xlsx_parser.py
markio/routers/: __init__.py  doc_router.py  docx_router.py  epub_router.py  file_router.py  html_router.py  image_router.py  pdf_router.py  ppt_router.py  pptx_router.py  url_router.py  xlsx_router.py
markio/schemas/: parser_base.py  parsers_schemas.py
markio/sdk/: markio_cli.py  markio_sdk.py
markio/settings/: __init__.py  config_interface.py  config_model.py
markio/utils/: file_utils.py  libreoffice_converter.py  logger_config.py  model_manager.py
markio/web/: gradio_frontend.py
scripts/: run_local.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  quick_test.py  run_concurrent_tests.py  run_tests.py  test_all_parsers.py  test_api_endpoints.py  test_concurrency.py  test_concurrent.py  test_integration.py  test_utils.py
tests/test_docs/: test_doc.doc  test_docx.docx  test_epub.epub  test_html.html  test_xlsx.xlsx
